@@ -257,6 +257,14 @@ var Util, exports;
             return Util.exec(pCallBack, pArg);
         };
     };
+    /**
+     * function return false
+     */
+    Util.retFalse               = function(){
+        var lRet = false;
+        
+        return lRet;
+    };
     
     /**
      * return load functions thrue callbacks one-by-one
